--- a/index.html
+++ b/index.html
@@ -2,17 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+
+  <!-- Query -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
   <!-- Style -->
   <link rel="stylesheet" href="css/style.css">
   <title>Fizz Buzz</title>
 </head>
 <body>
-<ul id="lista_numeri">
+<div class="liste">
 
-</ul>
+  <div class="lista_for">
+    <h2>Metodo col 'For'</h2>
+    <ul id="for">
+
+    </ul>
+  </div>
+  <div class="lista_while">
+    <h2>Metodo col 'While'</h2>
+    <ul id="while">
+
+    </ul>
+  </div>
+
+
+
+</div>
 
   <script src="js/script.js" charset="utf-8"></script>
 </body>
